# onnx-rs

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/: simplify-report-2026-04-02.md
.github/workflows/: publish.yml
benches/: parse_bench.rs
examples/: bench.rs  build_and_inspect.rs  parse_and_walk.rs  roundtrip_file.rs
src/: ast.rs  encoder.rs  error.rs  lib.rs  parser.rs  wire.rs
tests/: ast_tests.rs  gap_tests.rs  official_model_tests.rs  op_type_tests.rs  parser_tests.rs  roundtrip_tests.rs  wire_tests.rs
